--- a/Discord tracking bot/Discord tracking bot.csproj
+++ b/Discord tracking bot/Discord tracking bot.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Discord.Net" Version="3.10.0" />
   </ItemGroup>
 
